/*
 * $Id: ChangeLog,v 1.3973 2005/03/21 17:38:44 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-03-21 17:12 UTC-0800 Ron Pinkas <Ron@xHarbour.com>
  * source/rtl/win32ole.prg
    ! Fixed bad typo GPF trap.
    * More conservative WideToAnsi()

  * source/vm/hash.c
    ! Fixed 2 GPF traps related to calling hb_itemReleaseString() and not resetting ->type member.

  * source/vm/hvm.c
    * Comments related to hb_itemReleaseString()

  * source/vm/memvars.c
    * Well behaved reset of ->type after hb_itemReleaseString()

2005-03-21 90:30 UTC-0800 Ron Pinkas <Ron@xHarbour.com>
  * source/rtl/win32ole.prg
    * Added logic to try DISPATCH_PROPERTYPUT first if prg syntax implies assignment.

2005-03-21 00:53 UTC-0800 Brian Hays <bhays@abacuslaw.com>
  * source/rtl/win32ole.prg
    ! commented a Tracelog and fixed two typos in comments

2005-03-21 09:25 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/win32ole.prg
    ! some compiler treats NULL as (void*) 0, not 0

2005-03-20 13:39 UTC-0800 Ron Pinkas <Ron@xHarbour.com>
  * source/rtl/win32ole.prg
    * Simplified AnsiToSysString()

2005-03-20 08:06 UTC-0800 Ron Pinkas <Ron@xHarbour.com>
  * source/pp/ppcore.c
    ! Fixed bad typo, was missing reset of kolSquare-- for ']'.

2005-03-20 09:05 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * utils/hbtest/rt_hvma.prg
  * utils/hbtest/rt_misc.prg
    ! Len( errornew() ) is 20 in MT mode

2005-03-19 12:08 UTC-0800 Ron Pinkas <Ron@xHarbour.com>
  * source/pp/ppcore.c
    ! Fixed GPF trap in getExpReal()

    /*
       I belive this is maybe the trap that triggered Brian's recent hbpp/compiler oddities.
     */

2005-03-19 20:45 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/common/hbver.c
    ! correct version info of Open Watcom

2005-03-19 20:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>